--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font awesome kit for icons -->
+    <script src="https://kit.fontawesome.com/877142f5f8.js" crossorigin="anonymous"></script>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <!-- CSS source file -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Checkout Page</title>
 </head>
 <body>
-    
+    <main>
+        <div class="main-container">
+            <div class="checkout-form-container">
+                <h1 class="title">Checkout</h1>
+                    <div class="form-one-container">
+                        <h3>Contact information</h3>
+                        <form id="form-one">
+                            <label for="email">E-mail</label>
+                            <input type="email" placeholder="Enter your email...">
+                            <label for="phone">Phone</label>
+                            <input type="number" placeholder="Enter your phone..">
+                        </form>
+                    </div>
+            <div class="checkout-img-container">
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
