--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
                             <label for="email">E-mail</label>
                             <input type="email" placeholder="Enter your email...">
                             <label for="phone">Phone</label>
-                            <input type="number" placeholder="Enter your phone..">
+                            <input type="text" placeholder="Enter your phone..">
+                        </form>
+                        <h3 class="form-two-title">Shipping address</h3>
+                        <form id="form-two">
+                            <label for="name">Full name</label>
+                            <input type="text" name="fname" placeholder="Full name">
+                            <label for="address">Address</label>
+                            <input type="text" placeholder="Your address.. ">
                         </form>
                     </div>
             <div class="checkout-img-container">
