--- a/index.html
+++ b/index.html
@@ -21,17 +21,47 @@
                     <div class="form-one-container">
                         <h3>Contact information</h3>
                         <form id="form-one">
-                            <label for="email">E-mail</label>
-                            <input type="email" placeholder="Enter your email...">
-                            <label for="phone">Phone</label>
-                            <input type="text" placeholder="Enter your phone..">
+                            <div class="input-box">
+                                <label for="email">E-mail</label>
+                                <input type="email" placeholder="Enter your email...">
+                            </div>
+                            <div class="input-box">
+                                <label for="phone">Phone</label>
+                                <input type="text" placeholder="Enter your phone..">
+                            </div>
                         </form>
                         <h3 class="form-two-title">Shipping address</h3>
+                        
                         <form id="form-two">
-                            <label for="name">Full name</label>
-                            <input type="text" name="fname" placeholder="Full name">
-                            <label for="address">Address</label>
-                            <input type="text" placeholder="Your address.. ">
+                            <div class="input-box">
+                                <label for="name">Full name</label>
+                                <input type="text" name="fname" placeholder="Full name">
+                            </div>
+                            <div class="input-box">
+                                <label for="address">Address</label>
+                                <input type="text" placeholder="Your address.. ">
+                            </div>
+                            <div class="input-box">
+                                <label for="city">City</label>
+                                <input type="text" placeholder="Your city..">
+                            </div>
+                            <div class="input-box">
+                                <label for="">Country</label>
+                                <select id="country">
+                                    <option value="USA">USA</option>
+                                    <option value="Europe">Europe</option>
+                                    <option value="asia">Asia</option>
+                                </select>
+                            </div>
+                            <div class="input-box">
+                                <label for="postal code">Postal code</label>
+                                <input type="text" placeholder="Your postal code..">
+                            </div>
+                            <div class="input-box">
+                                <input type="checkbox" name="" id="">
+                                <label for="checkbox">Save this information for next time</label>
+                            </div>
+                            <button class="btn-primary">Continue</button>
                         </form>
                     </div>
             <div class="checkout-img-container">
