form related styles

--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
                                 <label for="city">City</label>
                                 <input type="text" placeholder="Your city..">
                             </div>
-                            <div class="input-box">
-                                <label for="">Country</label>
-                                <select id="country">
-                                    <option value="USA">USA</option>
-                                    <option value="Europe">Europe</option>
-                                    <option value="asia">Asia</option>
-                                </select>
+                            <div class="flex">
+                                <div class="input-box">
+                                    <label for="">Country</label>
+                                    <select id="country">
+                                        <option value="USA">USA</option>
+                                        <option value="Europe">Europe</option>
+                                        <option value="asia">Asia</option>
+                                    </select>
+                                </div>
+                                <div class="input-box postal-code-box">
+                                    <label for="postal code">Postal code</label>
+                                    <input type="text" id="postal-code" placeholder="Your postal code..">
+                                </div>
                             </div>
-                            <div class="input-box">
-                                <label for="postal code">Postal code</label>
-                                <input type="text" placeholder="Your postal code..">
-                            </div>
-                            <div class="input-box">
+                            <div class="input-box checkbox">
                                 <input type="checkbox" name="" id="">
                                 <label for="checkbox">Save this information for next time</label>
                             </div>
