form buidilng up

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 </div>
                             </div>
                             <div class="input-box checkbox">
-                                <input type="checkbox" name="" id="">
+                                <input type="checkbox" name="" id="checkbox-input">
                                 <label for="checkbox">Save this information for next time</label>
                             </div>
                             <button class="btn-primary">Continue</button>
