--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 
             <!-- image container -->
             <div class="checkout-img-container">
-                <div class="vintage-bag">
-                    <img src="assets/photo1.png" alt="">
+                <div class="vintage-bag card">
+                    <img class="vintage-img" src="assets/photo1.png" alt="">
                     <div class="box-content">
                         <h3>Vintage Backbag</h3>
                         <div class="price">
-                            <p>$54.99</p>
-                            <p>$94.99</p>
+                            <p class="discount-price">$54.99</p>
+                            <p class="regular-price"><del>$94.99</del></p>
                         </div>
-                        <input class="hide" type="number" id="quantity">
+                        <input type="number" id="quantity" min="1" max="100" value="1">
                     </div>
                 </div>
             </div>
