overall css done, icons are left

--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
                         <input type="number" id="quantity" min="1" max="100" value="1">
                     </div>
                 </div>
+                <div class="levi-shoes card">
+                    <img class="vintage-img" src="assets/photo2.png" alt="">
+                    <div class="box-content">
+                        <h3>Levi Shoes</h3>
+                        <div class="price">
+                            <p class="discount-price">$74.99</p>
+                            <p class="regular-price"><del>$124.99</del></p>
+                        </div>
+                        <input type="number" id="quantity" min="1" max="100" value="1">
+                    </div>
+                </div>
+                <div class="total-amount">
+                    <div class="shipping">
+                        <h3>Shipping</h3>
+                        <p>$19</p>
+                    </div>
+                    <div class="total">
+                        <h3>Total</h3>
+                        <p>$148.98</p>
+                    </div>
+                </div>
             </div>
             <!-- Image container ends -->
         </div>
