--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <input type="text" placeholder="Your city..">
                             </div>
                             <div class="flex">
-                                <div class="input-box">
+                                <div class="input-box country">
                                     <label for="">Country</label>
                                     <input placeholder="Your country.." class="country" list="country" name="country">
                                     <datalist id="country">
@@ -107,6 +107,11 @@
                 </div>
             </div>
             <!-- Image container ends -->
+
+        </div>
+        <!-- footer section -->
+        <div class="footer">
+            <p>created by <span class="bold">Jubair Ahmed</span> - devChallenges.io</p>
         </div>
     </main>
 </body>
