desktop version finished

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <input type="text" placeholder="Your city..">
                             </div>
                             <div class="flex">
-                                <div class="input-box country">
+                                <div class="input-box">
                                     <label for="">Country</label>
                                     <input placeholder="Your country.." class="country" list="country" name="country">
                                     <datalist id="country">
