--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
                         <form id="form-one">
                             <div class="input-box">
                                 <label for="email">E-mail</label>
+                                <i class="fa fa-solid fa-envelope"></i>
                                 <input type="email" placeholder="Enter your email...">
                             </div>
                             <div class="input-box">
                                 <label for="phone">Phone</label>
+                                <i class="fa fa-solid fa-phone fa-flip-horizontal"></i>
                                 <input type="text" placeholder="Enter your phone..">
                             </div>
                         </form>
@@ -36,14 +38,17 @@
                         <form id="form-two">
                             <div class="input-box">
                                 <label for="name">Full name</label>
+                                <i class="fa fa-solid fa-user"></i>
                                 <input type="text" name="fname" placeholder="Full name">
                             </div>
                             <div class="input-box">
                                 <label for="address">Address</label>
+                                <i class="fa fa-solid fa-address-book"></i>
                                 <input type="text" placeholder="Your address.. ">
                             </div>
                             <div class="input-box">
                                 <label for="city">City</label>
+                                <i class="fa fa-solid fa-city"></i>
                                 <input type="text" placeholder="Your city..">
                             </div>
                             <div class="flex">
@@ -61,7 +66,7 @@
                                     <input type="text" id="postal-code" placeholder="Your postal code..">
                                 </div>
                             </div>
-                            <div class="input-box checkbox">
+                            <div class="checkbox">
                                 <input type="checkbox" name="" id="checkbox-input">
                                 <label for="checkbox">Save this information for next time</label>
                             </div>
